Project/k8s/backend/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: backend-ns
spec:
  selector:
    app: backend
  ports:
  - port: 5000
